--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
 .container {
-	font-family: Garamond, serif;
+	font-family: Georgia, serif;
 	margin-top: 40px;
 }
 
 img {
 	height: 50%;
 	width: 25%;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  font-size: 15px;
+  background-color: rgba(245, 245, 245, 0.4);
 }
